--- a/ubuntu/focal-2004/Dockerfile
+++ b/ubuntu/focal-2004/Dockerfile
@@ -4,15 +4,6 @@ RUN apt-get update; \
     apt-get -qq clean; \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
-    rm -f /lib/systemd/system/multi-user.target.wants/*; \
-    rm -f /etc/systemd/system/*.wants/*; \
-    rm -f /lib/systemd/system/local-fs.target.wants/*; \
-    rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
-    rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
-    rm -f /lib/systemd/system/basic.target.wants/*; \
-    rm -f /lib/systemd/system/anaconda.target.wants/*;
-
 RUN systemctl enable ssh.service; 
 
 RUN useradd --create-home -s /bin/bash vagrant; \
@@ -28,5 +19,4 @@ RUN chmod 600 /home/vagrant/.ssh/authorized_keys; \
 
 VOLUME [ "/sys/fs/cgroup" ]
 
-CMD ["/usr/sbin/init"]
-
+CMD ["/lib/systemd/systemd"]
